external-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: HTTP1
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/sentiment"
                route:
                  cluster: sa-webapp
              - match:
                  prefix: "/feedback"
                route:
                  cluster: sa-feedback
              - match:
                  path: "/"
                route:
                  cluster: sa-frontend
              - match:
                  prefix: "/static"
                route:
                  cluster: sa-frontend
              - match:
                  regex: '^.*\.(ico|png|jpg)$'
                route:
                  cluster: sa-frontend
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: sa-frontend
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http_protocol_options: {}
    hosts:
    - socket_address:
        address: sa-frontend
        port_value: 80
  - name: sa-webapp
    connect_timeout: 7.25s
    type: strict_dns
    lb_policy: round_robin
    http_protocol_options: {}
    hosts:
    - socket_address:
        address: sa-webapp
        port_value: 8080
  - name: sa-feedback
    connect_timeout: 7.25s
    type: strict_dns
    lb_policy: round_robin
    http_protocol_options: {}
    hosts:
    - socket_address:
        address: sa-feedback
        port_value: 80
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
